# japanese_qa_demo_with_haystack_and_es

./: .gitignore  README.md  haystack_qa.py  pyproject.toml
sample_es/: README.md  analyzer.json  docker-compose.yml  test_wiki_index_create.py  wiki_index_create.py
