[tool.poetry]
name = "japanese_qa_demo_with_haystack_and_es"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
wikiextractor = "^3.0.6"
esanpy = "^1.1.0"
elasticsearch = "7.9.1"
pytest-mock = "^3.10.0"
numpy = "^1.23.5"
Cython = "^0.29.32"
scipy = "^1.9.3"
farm-haystack = "1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
